--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,9 +29,9 @@ jobs:
     # Build the Docker image
     - name: Build Docker image
       run: |
-        docker build -t ${{ secrets.DOCKER_USERNAME }}/django-node:latest .
+        docker build -t ${{ secrets.DOCKER_USERNAME }}/node-app:latest .
 
     # Push Docker image to Docker Hub
     - name: Push Docker image
       run: |
-        docker push ${{ secrets.DOCKER_USERNAME }}/django-node:latest
+        docker push ${{ secrets.DOCKER_USERNAME }}/node-app:latest
